--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -12,8 +12,9 @@
   margin: 0;
   padding: 0;
 }
+
+/* me permite deslizar cuando hago clic en los links del menu */
 html {
-  /* me permite deslizar cuando hago clic en los links del menu */
   scroll-behavior: smooth;
 }
 
@@ -23,53 +24,6 @@ html {
   color: inherit;
 }
 
-/* MENU */
-.contenedor-header {
-  background: var(--background1);
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 99;
-}
-.contenedor-header header {
-  max-width: 1100px;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 15px 20px;
-}
-.contenedor-header header .logo a {
-  font-family: "Righteous";
-  font-size: 30px;
-  color: var(--main-color);
-  text-decoration: none;
-}
-.contenedor-header header ul {
-  display: flex;
-  list-style: none;
-}
-.contenedor-header header nav ul li a {
-  text-align: none;
-  color: var(--white);
-  margin: 0 15px;
-  padding: 3px;
-  transition: 0.5s;
-  text-decoration: none;
-}
-.contenedor-header header nav ul li a:hover {
-  color: var(--main-color);
-  font-weight: bold;
-}
-.nav-responsive {
-  background-color: var(--main-color);
-  color: var(--white);
-  padding: 5px 10px;
-  border-radius: 5px;
-  cursor: pointer;
-  display: none;
-}
 /* SECCION INICIO */
 .inicio {
   background: linear-gradient(
@@ -77,7 +31,7 @@ html {
       rgba(30, 35, 38, 0.8),
       rgba(30, 35, 38, 1)
     ),
-    url(img/fondo.jpg);
+    url(../img/fondo.jpg);
   background-size: cover;
   height: 100vh;
   color: var(--white);
@@ -505,29 +459,6 @@ footer .arriba {
   font-size: 18px;
 }
 /* SECCION RESPONSIVE */
-@media screen and (max-width: 980px) {
-  nav {
-    display: none;
-  }
-  .nav-responsive {
-    display: block;
-  }
-  nav.responsive {
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 75px;
-    background-color: var(--background2);
-    width: 180px;
-  }
-  nav.responsive ul {
-    display: block !important;
-  }
-  nav.responsive ul li {
-    border-bottom: 1px solid var(--white);
-    padding: 10px 0;
-  }
-}
 @media screen and (max-width: 700px) {
   .sobremi .fila {
     display: block;
