--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -24,86 +24,7 @@ html {
   color: inherit;
 }
 
-/* SECCION INICIO */
-.inicio {
-  background: linear-gradient(
-      to top,
-      rgba(30, 35, 38, 0.8),
-      rgba(30, 35, 38, 1)
-    ),
-    url(../img/fondo.jpg);
-  background-size: cover;
-  height: 100vh;
-  color: var(--white);
-  display: flex;
-  align-items: center;
-}
-
-#inicio{
-    margin-top: 50px;
-}
-
-.inicio .contenido-banner {
-  padding: 20px;
-  background-color: var(--background1);
-  max-width: 350px;
-  margin: auto;
-  text-align: center;
-  border-radius: 40px;
-}
-
-@keyframes parpadeoBoxShadow {
-    0% {
-      box-shadow: 0 0 15px 5px rgba(28, 182, 152, 0.9); 
-    }
-    25% {
-      box-shadow: 0 0 15px 5px rgba(255, 0, 0, 0.9); 
-    }
-    50% {
-      box-shadow: 0 0 15px 5px rgba(0, 0, 255, 0.9); 
-    }
-    75% {
-      box-shadow: 0 0 15px 5px rgba(255, 255, 0, 0.9); /
-    }
-    100% {
-      box-shadow: 0 0 15px 5px rgba(28, 182, 152, 0.9); 
-    }
-}
-
-.inicio .contenido-banner img {
-  margin: 40px auto;
-  display: block;
-  width: 80%;
-  border-radius: 50%;
-  animation: parpadeoBoxShadow 10s infinite;
-  border: none;
-}
-
-.inicio .contenido-banner h1 {
-  margin-top: 40px;
-  font-size: 42px;
-  font-family: "Righteous";
-}
-.inicio .contenido-banner h2 {
-  font-size: 15px;
-  font-weight: normal;
-}
-.inicio .contenido-banner .redes a {
-  color: var(--white);
-  display: inline-block;
-  text-decoration: none;
-  border: 1px solid var(--white);
-  border-radius: 100%;
-  width: 42px;
-  height: 42px;
-  line-height: 42px;
-  margin: 40px 5px;
-  font-size: 20px;
-  transition: 0.3s;
-}
-.inicio .contenido-banner .redes a:hover {
-  background-color: var(--main-color);
-}
+/* SECCION SOBRE MI */
 .sobremi {
   background-color: var(--background1);
   color: var(--white);
