--- a/CSS/portafolio.css
+++ b/CSS/portafolio.css
@@ -1,111 +1,130 @@
 :root {
-    --main-color: #40c8a4;
-    --background1: #1e2326;
-    --background2: #252a2e;
-    --white: #fff;
-  }
+  --main-color: #40c8a4;
+  --background1: #1e2326;
+  --background2: #252a2e;
+  --white: #fff;
+}
 
 /* SECCION PORTFOLIO */
 .portfolio {
-    background-color: var(--background2);
-    color: var(--white);
-    padding: 50px 20px;
-  }
-  .portfolio .contenido-seccion {
-    max-width: 1100px;
-    margin: auto;
-  }
-  .portfolio h2 {
-    font-size: 48px;
-    font-family: "Righteous";
-    text-align: center;
-    padding: 20px 0;
-  }
-  .portfolio .galeria {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-  .portfolio .galeria .proyecto {
-    position: relative;
-    width: 300px;
-    height: 300px;
-    margin: 10px;
-    overflow: hidden;
-    cursor: pointer;
-    border-radius: 10px;
-    background-color: var(--white);
-  }
-  .portfolio .galeria .proyecto img {
-    width: 100%;
-    height: 100%;
-    display: block;
-  }
-  .portfolio .galeria .proyecto .overlay {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    background: linear-gradient(rgba(28, 182, 152, 0.8), rgba(28, 182, 152, 0.8));
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    transition: 1s;
-    font-size: 18px;
-    letter-spacing: 3px;
-    opacity: 0;
-  }
-  .portfolio .galeria .proyecto .overlay h3 {
-    margin-bottom: 20px;
-    transition: 1s;
-  }
-  .portfolio .galeria .proyecto .overlay:hover {
-    opacity: 1;
-  }
-  .portfolio .galeria .proyecto .overlay:hover h3 {
-    margin-bottom: 0px;
-  }
-  .portfolio .galeria .proyecto .overlay .icons-container .icons{
-      width: 50px;
-      height: auto;
-      margin-top: 10px;
-  }
-  
-  .icons-container {
-      display: flex;
-      justify-content: center; 
-      align-items: center; 
-      gap: 10px; 
-  }
+  background-color: var(--background2);
+  color: var(--white);
+  padding: 50px 20px;
+}
+
+.portfolio .contenido-seccion {
+  max-width: 1100px;
+  margin: auto;
+}
+
+.portfolio h2 {
+  font-size: 48px;
+  font-family: "Righteous";
+  text-align: center;
+  padding: 20px 0;
+}
+
+.portfolio .galeria {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.portfolio .galeria .proyecto {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  margin: 10px;
+  overflow: hidden;
+  cursor: pointer;
+  border-radius: 10px;
+  background-color: var(--white);
+}
+
+.portfolio .galeria .proyecto img {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.portfolio .galeria .proyecto .overlay {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background: linear-gradient(rgba(28, 182, 152, 0.8), rgba(28, 182, 152, 0.8));
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: 1s;
+  font-size: 18px;
+  letter-spacing: 3px;
+  opacity: 0;
+}
+
+.portfolio .galeria .proyecto .overlay h3 {
+  margin-bottom: 20px;
+  transition: 1s;
+}
+
+.portfolio .galeria .proyecto .overlay:hover {
+  opacity: 1;
+}
+
+.portfolio .galeria .proyecto .overlay:hover h3 {
+  margin-bottom: 0px;
+}
+
+.portfolio .galeria .proyecto .overlay .icons-container .icons {
+  width: 50px;
+  height: auto;
+  margin-top: 10px;
+}
+
+.icons-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+/*estilos de enlaces*/
+.enlace {
+  text-decoration: none;
+  color: inherit;
+}
+
 
 /* SECCION RESPONSIVE */
 @media screen and (max-width: 1024px) {
   .portfolio .contenido-seccion {
-    padding: 0 10px; 
+    padding: 0 10px;
   }
 }
 
 @media screen and (max-width: 700px) {
   .portfolio .galeria {
-    justify-content: center; 
+    justify-content: center;
   }
+
   .portfolio .galeria .proyecto {
-    width: calc(100% - 20px); 
-    margin: 10px; 
+    width: calc(100% - 20px);
+    margin: 10px;
   }
 }
 
 @media screen and (max-width: 480px) {
   .portfolio h2 {
-    font-size: 36px; 
+    font-size: 36px;
   }
+
   .portfolio .galeria .proyecto {
     height: auto;
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
   }
+
   .portfolio .galeria .proyecto .overlay {
-    font-size: 16px; 
+    font-size: 16px;
   }
 }
-
