--- a/CSS/portafolio.css
+++ b/CSS/portafolio.css
@@ -46,6 +46,12 @@
   display: block;
 }
 
+.portfolio .galeria .proyecto video {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
 .portfolio .galeria .proyecto .overlay {
   position: absolute;
   top: 0;
